refactor: replace namespace parameter with query field in list roles and permissions requests
